@@ -4,7 +4,7 @@
 \alias{plot.rq.pen.seq.cv}
 \title{Plots cross validation results from a rq.pen.seq.cv object}
 \usage{
-\method{plot}{rq.pen.seq.cv}(x, septau = TRUE, tau = NULL, logLambda = FALSE, main = NULL, ...)
+\method{plot}{rq.pen.seq.cv}(x, septau = TRUE, tau = NULL, logLambda = TRUE, main = NULL, ...)
 }
 \arguments{
 \item{x}{The rq.pen.seq.cv object}
