@@ -3,6 +3,7 @@ rqPen 3.1.1 (Release date: )
 * Fixed issue where predict was not working for a single observation. 
 * Set logLambda=TRUE as default for plot.rq.pen.seq.cv()
 * Fixed issue where SCAD and MCP penalties could fail for large values of lambda, even when n>p+1. New solution is to try quantreg:::rq(y~x,tau=tau) and if that fails then rq.group.pen() or rq.pen() stops early. 
+* Updated bytau.plot() code to allow users to specify specific variables they want to plot
 
 rqPen 3.1 (Release date: 2023-02-20)
 =============
